rest/rest-ingress-gke.yaml
#
# See https://kubernetes.io/docs/concepts/services-networking/ingress/
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: global-ip
    #nginx.ingress.kubernetes.io/proxy-body-size: 16m

spec:
  defaultBackend:
    service:
      name: angular-service
      port:
        number: 90
  rules:
    - http:
        paths:
          - path: /
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: angular-service 
                port:
                  number: 90
    - http:
        paths:
          - path: /apiv1
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: rest-svc
                port:
                  number: 5000
